# number-factory

./: .clang-format  .gitignore  CMakeLists.txt  justfile  shell.nix
src/: addition.c  addition.h  board.c  board.h  constants.h  deque.h  entity.c  entity.h  game.h  game_state.c  game_state.h  gameplay_state.c  gameplay_state.h  input.c  input.h  item.c  item.h  level.c  level.h  main.c  output.c  output.h  pause_state.c  pause_state.h  pipe.c  pipe.h  splitter.c  splitter.h  start_menu_state.c  start_menu_state.h  utils.c  utils.h
web/: shell.html
